// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`levenshtein nearest words > selectNearestWords 'alk' edits: 5 num: 5 1`] = `
[
  {
    "dist": 1,
    "word": "talk",
  },
  {
    "dist": 1,
    "word": "walk",
  },
  {
    "dist": 2,
    "word": "talks",
  },
  {
    "dist": 2,
    "word": "walks",
  },
  {
    "dist": 3,
    "word": "",
  },
]
`;

exports[`levenshtein nearest words > selectNearestWords 'helpful' edits: 3 num: 5 1`] = `
[
  {
    "dist": 0,
    "word": "helpful",
  },
  {
    "dist": 3,
    "word": "help",
  },
  {
    "dist": 3,
    "word": "helped",
  },
  {
    "dist": 3,
    "word": "helper",
  },
  {
    "dist": 3,
    "word": "helping",
  },
]
`;

exports[`levenshtein nearest words > selectNearestWords 'talker' edits: 5 num: 5 1`] = `
[
  {
    "dist": 0,
    "word": "talker",
  },
  {
    "dist": 1,
    "word": "talked",
  },
  {
    "dist": 1,
    "word": "walker",
  },
  {
    "dist": 2,
    "word": "talk",
  },
  {
    "dist": 2,
    "word": "talks",
  },
]
`;

exports[`levenshtein nearest words > selectNearestWords 'toy-box' edits: 5 num: 5 1`] = `
[
  {
    "dist": 4,
    "word": "box",
  },
  {
    "dist": 4,
    "word": "toy",
  },
  {
    "dist": 4,
    "word": "toys",
  },
  {
    "dist": 5,
    "word": "fox",
  },
  {
    "dist": 5,
    "word": "joy",
  },
]
`;

exports[`levenshtein nearest words > selectNearestWords 'walk' edits: 3 num: 5 1`] = `
[
  {
    "dist": 0,
    "word": "walk",
  },
  {
    "dist": 1,
    "word": "talk",
  },
  {
    "dist": 1,
    "word": "walks",
  },
  {
    "dist": 2,
    "word": "talks",
  },
  {
    "dist": 2,
    "word": "walked",
  },
]
`;
